[package]
name = "warpsocket"
version = "0.1.4"
license = "ISC"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
neon = "1.1"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
dashmap = "5.0"
futures-util = "0.3"
lazy_static = "1.4"
http = "=0.2.12"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
