[package]
name = "warpsocket"
version = "0.4.0"
license = "ISC"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[lints.clippy]
# Catch common async deadlock patterns
await_holding_lock = "warn"
await_holding_refcell_ref = "warn"

# Allow some common patterns to reduce noise
match_like_matches_macro = "allow"
needless_return = "allow"

[dependencies]
neon = "1.1"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
dashmap = "5.0"
futures-util = "0.3"
lazy_static = "1.4"
http = "=0.2.12"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
